--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Drift Analysis/odi/.ipynb_checkpoints/odi_data_analysis-checkpoint.ipynb
 Statistics/UEFA_probas/.ipynb_checkpoints/uefa_probas-checkpoint.ipynb
 Drift Analysis/odi/.ipynb_checkpoints/Untitled-checkpoint.ipynb
 Drift Analysis/odi/.ipynb_checkpoints/odi_data_analysis_thresholdless_monitoring-checkpoint.ipynb
+/agents/summit_agent/.idea
+/agents/summit_agent/__pycache__
